--- a/app/src/main/res/layout/activity_opcoes.xml
+++ b/app/src/main/res/layout/activity_opcoes.xml
@@ -159,7 +159,7 @@
 
         <TextView
             android:id="@+id/textview1"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
