--- a/app/src/main/res/layout/content_scrolling.xml
+++ b/app/src/main/res/layout/content_scrolling.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    app:layout_behavior="@string/title_activity_info"
     tools:context=".InfoActivity"
-    tools:showIn="@layout/activity_info">
+    tools:showIn="@layout/content_scrolling">
 
     <TextView
         android:id="@+id/text1"
@@ -14,6 +14,9 @@
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
         android:autoSizeTextType="uniform"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="18sp"
         android:text="@string/tb_info_text" />
 
 </androidx.core.widget.NestedScrollView>
